cmake_minimum_required(VERSION 3.9)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled main.cpp answer/344.cpp answer/11.cpp answer/3.cpp answer/438-2.cpp answer/76.cpp run.h answer/349.cpp answer/350.cpp answer/242.cpp answer/202.cpp answer/290.cpp answer/205.cpp answer/451.cpp answer/1.cpp answer/447.cpp answer/217.cpp answer/219.cpp answer/220.cpp answer/206.cpp)